Reset clip parent in CompositedLayerMapping::updateClipParent

Reset clip parent instead of skipping update clip parent when
owningLayerClippedByLayerNotAboveCompositedAncestor(scrollParent) returns true.

This avoids having stale clip parent when the above-mentioned value switched
from false to true. Having stale clip parent result in inconsistent rendering
comparing to a static page that has a true value since beginning.

Technically it is still incorrect but fixing every case of clip escaping is
out of the scope of this CL.

BUG=647508
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2350363004
Cr-Commit-Position: refs/heads/master@{#421395}

Former-commit-id: 1de92f8c7df73309f3f192c14cb6755ddea380b5